--- a/tasks/templates/tasks/add.html
+++ b/tasks/templates/tasks/add.html
@@ -6,6 +6,7 @@
         <input type="text", name="task">
         <input type="submit">
     </form>
+    <a href="{% url 'tasks:index' %}">View Tasks</a>
 {% endblock %}
 
 <!-- 
