--- a/tasks/templates/tasks/index.html
+++ b/tasks/templates/tasks/index.html
@@ -7,6 +7,7 @@
             <li>{{ task }}</li>
         {% endfor %}
     </ul>
+    <a href="{% url 'tasks:add' %}">Add a New Task</a>
 {% endblock %}
 
 {% comment %}
