--- a/tasks/templates/tasks/add.html
+++ b/tasks/templates/tasks/add.html
@@ -2,7 +2,8 @@
 
 {% block body %}
     <h1>Add Task:</h1>
-    <form action="">
+    <form action="{% url 'tasks:add' %}" method="post">
+        {% csrf_token %}
         <input type="text", name="task">
         <input type="submit">
     </form>
