--- a/airline/flights/templates/flights/index.html
+++ b/airline/flights/templates/flights/index.html
@@ -4,7 +4,7 @@
     <h1>Flights:</h1>
     <ul>
         {% for flight in flights %}
-            <li>Flight {{ f.id }}: {{ f.origin }} to {{ f.destination }}</li>
+            <li>Flight {{ flight.id }}: {{ flight.origin }} to {{ flight.destination }}</li>
         {% endfor %}
     </ul>
 {% endblock %}
